Ensure processing admin orders runs collect scan and new items phases